# Higgs-Ultimate

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  README_ZH.md  UPDATE_PLAN.md
.github/workflows/: star-history.yml
app/desktop_api/: audiocpp_api.cpp  audiocpp_api.h
desktop/: .gitignore  index.html  package-lock.json  package.json
desktop/src/: apiExamples.ts  config.ts  dom.ts  i18n.ts  main.ts  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/examples/: asr_bench.rs  asr_smoke.rs  diar_test.rs  env_check_smoke.rs  voiceclean_test.rs
desktop/src-tauri/resources/bsroformer/: README.txt
desktop/src-tauri/src/: audio.rs  download.rs  engine.rs  envdeps.rs  lib.rs  parakeet.rs  recorder.rs  voiceclean.rs
docs/: ace_step.md  audio_tools.md  music_generation.md  qwen3.md  seed_vc.md  speech_analysis.md  stable_audio.md  tts.md  usage.md  vevo2.md
include/engine/framework/modules/text_encoders/: t5_base_encoder.h  t5_gemma_encoder.h
include/engine/framework/runtime/: session.h
include/engine/models/higgs_tts/: assets.h  audio_codes.h  codec.h  generator.h  loader.h  session.h  tokenizer.h
scripts/: build_windows.ps1
src/framework/assets/: tensor_source.cpp
src/framework/modules/optimizations/: fast_kv_modules.cpp
src/framework/modules/text_encoders/: t5_base_encoder.cpp  t5_gemma_encoder.cpp
src/framework/runtime/: registry.cpp  session.cpp
src/models/higgs_tts/: assets.cpp  audio_codes.cpp  codec.cpp  generator.cpp  loader.cpp  session.cpp  tokenizer.cpp
tests/: warmbench.py
tests/ace_step/: ace_step_memory_validate.cpp  ace_step_python_warm_bench.py  ace_step_warm_bench.cpp  ace_step_warm_bench_cases.json  convert_silence_latent.py  run_base_cfg_warmbench.sh
tests/heartmula/: heartmula_python_warm_bench.py  heartmula_warm_bench.cpp  heartmula_warm_bench_cases.json
tests/higgs_tts/: higgs_tts_python_warm_bench.py  higgs_tts_warm_bench.cpp
tests/irodori_tts/: convert_dacvae_pth_to_safetensors.py  irodori_tts_python_warm_bench.py  irodori_tts_warm_bench.cpp  irodori_tts_warm_bench_cases.json
tests/kokoro_tts/: kokoro_tts_python_warm_bench.py  kokoro_tts_warm_bench.cpp  kokoro_tts_warm_bench_cases.txt
tests/moss_tts/: moss_tts_python_warm_bench.py  moss_tts_warm_bench.cpp  moss_tts_warm_bench_cases.txt
tests/parakeet_tdt/: parakeet_python_warm_bench.py  parakeet_warm_bench.cpp
tests/stable_audio/: stable_audio_python_warm_bench.py  stable_audio_warm_bench.cpp  stable_audio_warm_bench_cases.json
tests/supertonic/: convert_onnx_to_safetensors.py  supertonic_python_warm_bench.py  supertonic_warm_bench.cpp  supertonic_warm_bench_cases.json
tests/vibevoice/: run_vibevoice_python_100min.py  vibevoice_4speaker_longform_script.txt  vibevoice_python_warm_bench.py  vibevoice_warm_bench.cpp  vibevoice_warm_bench_cases.json
tools/: model_manager.py  prepare_voice_ref.py  quantize_safetensors.cpp
tools/audiocpp_cli/: audiocpp_cli_longform_music_gen_cases.json  audiocpp_cli_longform_tts_clone_cases.json  audiocpp_cli_longform_vibevoice_cases.json  audiocpp_cli_path_cases.json  run_audiocpp_cli_path_tests.py
