[package]
name = "higgs-audio-studio"
version = "0.3.1"
description = "Tauri shell for the ported Higgs Audio v3 C++ engine"
authors = ["Higgs Audio v3 Studio"]
edition = "2021"

[lib]
name = "higgs_audio_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Native microphone capture (cpal) + WAV writing (hound) for the in-app
# "record your voice" reference — the reliable path on desktop (WebView2
# getUserMedia is flaky). Same crates the Tauri recorder plugins use.
cpal = "0.15"
hound = "3.5"
# EBU R128 / LUFS loudness measurement to level-match multi-speaker segments and
# continuation clips to a common loudness (references come at different volumes).
ebur128 = "0.1"
libloading = "0.8"
nvml-wrapper = "0.10"
# Parakeet ASR (NVIDIA parakeet-tdt-0.6b-v3, multilingual incl. RU) via ONNX
# Runtime, CPU. `load-dynamic` loads onnxruntime.dll at runtime instead of
# static-linking the prebuilt lib — this both fits the portable model (ship the
# DLL next to the exe, like audiocpp_engine.dll) and sidesteps the MSVC-STL
# version skew in the static prebuilt. pyke still fetches the matching dynamic
# build at build time and stages the DLL next to the target.
parakeet-rs = { version = "0.3", default-features = false, features = ["cpu", "ort-defaults", "load-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shine-rs = "0.1.3"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg", "aac", "isomp4"] }
sysinfo = "0.32"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
thiserror = "2"
ureq = { version = "3", features = ["json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
